saves/test/demo_full_20240802_193545/edgedetect/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp edgedetect_tb.v edgedetect.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
edgedetect_tb.v:138: $finish called at 610000 (1ps)

iverilog cmd 2 error:

